syntax = "proto3";

option java_package = "data";
option java_multiple_files = true;

message UserAccount {
  string fullName = 1;
  string email = 2;
  string passWord = 3;
}